Added logic for transport and data layers, added docs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(LIN_master LIN_master_node.c HAL_debug.c)
+add_library(LIN_master  
+            LIN_master_node.c
+            HAL_debug.c
+            LIN_data_layer.c )
